<resources>
    <string name="app_name">Power List</string>
    <string name="add_new">Add New Task</string>
    <string name="today_task">Today\'s Tasks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createA">Create Account</string>
    <string name="fName">First Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="conPass">Confirm Password</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="emailA">Email Address</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="faceLogin">Log In with Facebook</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="highscore">Longest Streak:</string>
    <string name="currStreak">Current Streak:</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="logPic">PowerList Logo</string>
</resources>
